Fix overflow issue

--- a/src/css/custom.scss
+++ b/src/css/custom.scss
@@ -181,6 +181,7 @@ html[data-theme='dark'] {
 .navbar,
 .navbar .navbar-sidebar {
   background-color: #35414a;
+  overflow: hidden;
 }
 
 .navbar > .container {
